--- a/src/app/pages/charts/echarts/echarts.component.html
+++ b/src/app/pages/charts/echarts/echarts.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-lg-6">
+  <!-- <div class="col-lg-6">
     <nb-card>
       <nb-card-header>Pie</nb-card-header>
       <nb-card-body>
@@ -52,6 +52,14 @@
       <nb-card-header>Radar</nb-card-header>
       <nb-card-body>
         <ngx-echarts-radar></ngx-echarts-radar>
+      </nb-card-body>
+    </nb-card>
+  </div> -->
+  <div class="col-lg-12">
+    <nb-card>
+      <nb-card-header>Prueba</nb-card-header>
+      <nb-card-body>
+        <ngx-echarts-dashboard></ngx-echarts-dashboard>
       </nb-card-body>
     </nb-card>
   </div>
