--- a/src/app/pages/extra-components/alertas-orion/alertas-orion.component.html
+++ b/src/app/pages/extra-components/alertas-orion/alertas-orion.component.html
@@ -47,3 +47,11 @@
     <ngx-combinados-predeterminados-sin-stock></ngx-combinados-predeterminados-sin-stock>
   </nb-card-body>
 </nb-card>
+
+<!--Categorias redireccionadas-->
+<nb-card>
+  <nb-card-header>Control categorías Redireccionadas con productos asignados</nb-card-header>
+  <nb-card-body>
+    <ngx-categorias-redireccionadas></ngx-categorias-redireccionadas>
+  </nb-card-body>
+</nb-card>
