--- a/src/app/pages/tables/ventas-productos/ventas-productos.component.html
+++ b/src/app/pages/tables/ventas-productos/ventas-productos.component.html
@@ -1,4 +1,4 @@
-<nb-card size="large">
+<nb-card size="large" style="height: 100%;">
 
   <nb-card-header>Productos Vendidos</nb-card-header>
 
@@ -26,7 +26,7 @@
       </div>
   </div>
 
-  <div *ngIf="mostrarTabla">
+  <div *ngIf="mostrarTabla" style="width: 90%; padding: 25px; margin: auto; height: 100%;">
     <div class="table-responsive cnstr-record product-tbl" width="90%">
       <table class="table table-bordered heading-hvr">
         <thead>
@@ -52,10 +52,10 @@
       </table>
     </div>
 
-    <!-- <div *ngIf="mostrarTabla">
-      <canvas id="canvasSumatoria">{{ chartSumatoria }}</canvas>
-    </div> -->
+  </div>
 
+  <div *ngIf="mostrarTabla" style="width: 90%; padding: 25px; margin: auto; height: 100%;">
+    <canvas id="canvasSumatoria">{{ chartSumatoria }}</canvas>
   </div>
 
 </nb-card>
