--- a/src/app/pages/tables/categorias-por-meses/categorias-por-meses.component.html
+++ b/src/app/pages/tables/categorias-por-meses/categorias-por-meses.component.html
@@ -2,6 +2,10 @@
   <nb-card-header>Categorias Por Meses</nb-card-header>
   <nb-card-body style="height: 100%;">
 
+    <nb-select placeholder="Seleccione Tienda: " (selectedChange)="buscarTienda($event)">
+      <nb-option *ngFor="let tienda of tiendas" [value]="tienda.variable">{{ tienda.name }}</nb-option>
+    </nb-select><br><br>
+
     <div class="table-responsive cnstr-record product-tbl">
       <table class="table table-bordered heading-hvr">
         <thead>
@@ -45,9 +49,15 @@
             <td>{{cat.DICIEMBRE}}</td>
           </tr>
 
-          <div [hidden]="!hideme[i]" class="sub-table no-bg">
-            <h3>HOAAAAA</h3>
-          </div>
+          <tr [hidden]="!hideme[i]" class="sub-table no-bg" style="width: 100%;">
+            <td align="center"> </td>
+            <td align="center" colspan="14">
+              <div style="margin: auto;">
+                <br><br><canvas id="canvas-{{ cat.id_category }}">{{ chart }}</canvas><br><br>
+              </div>
+            </td>
+          </tr>
+
 
         </tbody>
       </table>
