--- a/src/app/pages/tables/categorias-por-meses/categorias-por-meses.component.html
+++ b/src/app/pages/tables/categorias-por-meses/categorias-por-meses.component.html
@@ -1,4 +1,4 @@
-<nb-card>
+<nb-card [nbSpinner]="loading" nbSpinnerStatus="primary">
   <nb-card-header>Categorias Por Meses</nb-card-header>
   <nb-card-body style="height: 100%;">
 
