--- a/src/app/pages/tables/mano-mano/mano-mano.component.html
+++ b/src/app/pages/tables/mano-mano/mano-mano.component.html
@@ -7,6 +7,7 @@
     <nb-radio-group  style="display: flex; justify-content: center;">
       <nb-radio [value]="1" (click)="avanzado(1)"> Indice 1,20 </nb-radio>
       <nb-radio [value]="4" (click)="avanzado(4)"> Indice 1,18 </nb-radio>
+      <nb-radio [value]="9" (click)="avanzado(9)"> Indice 1,15 </nb-radio>
       <nb-radio [value]="8" (click)="avanzado(8)"> Indice 1,10 </nb-radio>
       <nb-radio [value]="7" (click)="avanzado(7)"> Indice 1,05 </nb-radio>
       <nb-radio [value]="2" (click)="avanzado(2)"> Indice 1,03 </nb-radio>
