--- a/src/app/pages/charts/d3/d3.component.html
+++ b/src/app/pages/charts/d3/d3.component.html
@@ -1,5 +1,5 @@
-<div class="row">
-  <div class="col-lg-6">
+<div>
+  <!-- <div class="col-lg-6">
     <nb-card>
       <nb-card-header>Pie</nb-card-header>
       <nb-card-body>
@@ -30,10 +30,10 @@
         <ngx-d3-advanced-pie></ngx-d3-advanced-pie>
       </nb-card-body>
     </nb-card>
-  </div>
-  <div class="col-lg-6">
+  </div> -->
+  <div>
     <nb-card>
-      <nb-card-header>Area Chart</nb-card-header>
+      <nb-card-header>Prueba</nb-card-header>
       <nb-card-body>
         <ngx-d3-area-stack></ngx-d3-area-stack>
       </nb-card-body>
