--- a/src/app/pages/charts/echarts/echarts.component.html
+++ b/src/app/pages/charts/echarts/echarts.component.html
@@ -55,9 +55,9 @@
       </nb-card-body>
     </nb-card>
   </div> -->
-  <div class="col-lg-12">
-    <nb-card>
-      <nb-card-header>Prueba</nb-card-header>
+  <div style="width: 100%; height: 1000px;">
+    <nb-card style="width: 100%; height: 1000px;">
+      <nb-card-header>Árbol de Categorías</nb-card-header>
       <nb-card-body>
         <ngx-echarts-dashboard></ngx-echarts-dashboard>
       </nb-card-body>
