--- a/src/app/pages/tables/categoria-producto/categoria-producto.component.html
+++ b/src/app/pages/tables/categoria-producto/categoria-producto.component.html
@@ -1,4 +1,4 @@
-<nb-card>
+<nb-card [nbSpinner]="loading" nbSpinnerStatus="primary">
   <nb-card-header>Orden Cat-Product</nb-card-header>
 
   <nb-card-body>
@@ -9,6 +9,7 @@
                     <th> </th>
                     <th>Id Categoría</th>
                     <th>Categoría</th>
+                    <th>Cantidad de Productos</th>
                   </tr>
                 </thead>
                 <tbody *ngFor="let cat of listadoCategorias; let i = index">
@@ -17,15 +18,16 @@
                         <nb-icon icon="maximize-outline" pack="eva" class="expand-row" *ngIf="!hideme[i]" (click)="showLinea(i)"></nb-icon>
                         <nb-icon icon="minimize-outline" pack="eva" class="expand-row" *ngIf="hideme[i]" (click)="hideme[i] = !hideme[i]"></nb-icon>
                     </td>
-                    <td>{{cat.idCategory}}</td>
-                    <td>{{cat.idCategoryName}}</td>
+                    <td>{{cat.id_category}}</td>
+                    <td>{{cat.name}}</td>
+                    <td>{{ cat.cantidadProductos }}</td>
                   </tr>
 
 
                   <tr [hidden]="!hideme[i]" class="sub-table no-bg">
                     <td align="center"> </td>
                     <td colspan="15" class="p-0">
-                      <ngx-posicion-productos [idCategory] = "cat.idCategory"></ngx-posicion-productos>
+                      <ngx-posicion-productos [idCategory] = "cat.id_category"></ngx-posicion-productos>
                     </td>
                   </tr>
 
