--- a/src/app/pages/tables/roturas/roturas.component.html
+++ b/src/app/pages/tables/roturas/roturas.component.html
@@ -1,4 +1,4 @@
-<nb-card>
+<nb-card [nbSpinner]="loading" nbSpinnerStatus="primary">
   <nb-card-header>Roturas</nb-card-header>
   <nb-card-body>
     <ng2-smart-table [settings]="config" [source]="source">
