--- a/src/app/pages/tables/transportistas/transportistas.component.html
+++ b/src/app/pages/tables/transportistas/transportistas.component.html
@@ -8,7 +8,7 @@
 
 <br><br>
 
-<nb-card>
+<nb-card [nbSpinner]="loading" nbSpinnerStatus="primary">
   <nb-card-header>
     Transportistas
   </nb-card-header>
