--- a/src/app/pages/tables/productos-top-fechas/productos-top-fechas.component.html
+++ b/src/app/pages/tables/productos-top-fechas/productos-top-fechas.component.html
@@ -12,7 +12,7 @@
       </div>
       <!--BOTON-->
       <div>
-        <button nbButton status="primary" (click)="buscarProducto()" style="margin-right: 10px;">Buscar</button>
+        <button nbButton status="primary" (click)="buscarProducto()" style="margin-right: 10px; margin-left: 10px;">Buscar</button>
       </div>
   </div>
   <button nbButton status="primary" (click)="vacear()" *ngIf="mostrarTabla" style="width: 50%; margin: auto; margin-top: 10px; display: flex;">Volver a buscar</button>
