--- a/src/app/pages/extra-components/alertas-orion/alertas-orion.component.html
+++ b/src/app/pages/extra-components/alertas-orion/alertas-orion.component.html
@@ -1,6 +1,22 @@
+<!--Precios cambiados en Tienda-->
+<nb-card>
+  <nb-card-header>Control de precios Ax vs ORION91</nb-card-header>
+  <nb-card-body>
+    <ngx-precios-cambiados></ngx-precios-cambiados>
+  </nb-card-body>
+</nb-card>
+
+<!--Pedidos en Pre-Almacen-->
+<nb-card>
+  <nb-card-header>Pedidos en Pre-Almacén</nb-card-header>
+  <nb-card-body>
+    <ngx-pre-almacen></ngx-pre-almacen>
+  </nb-card-body>
+</nb-card>
+
 <!--Pagos Fraccionados-->
 <nb-card>
-  <nb-card-header>Pagos Fraccionados</nb-card-header>
+  <nb-card-header>Pagos Fraccionados pendientes de aceptar</nb-card-header>
   <nb-card-body>
     <ngx-pagos-fraccionados></ngx-pagos-fraccionados>
   </nb-card-body>
@@ -32,6 +48,14 @@
   </nb-card-body>
 </nb-card>
 
+<!--Alertas Amazon-->
+<nb-card>
+  <nb-card-header>Productos con más de 200 caracteres en nombre AMAZON</nb-card-header>
+  <nb-card-body>
+    <ngx-alertas-amazon></ngx-alertas-amazon>
+  </nb-card-body>
+</nb-card>
+
 <!--Errores AliExpress-->
 <nb-card>
   <nb-card-header>Errores AliExpress</nb-card-header>
@@ -55,3 +79,14 @@
     <ngx-categorias-redireccionadas></ngx-categorias-redireccionadas>
   </nb-card-body>
 </nb-card>
+
+<!--Productos desactivados en elementor-->
+<!-- <nb-card>
+  <nb-card-header>Productos desactivados en slider de elementor</nb-card-header>
+  <nb-card-body>
+    <ngx-productos-elementor></ngx-productos-elementor>
+  </nb-card-body>
+</nb-card> -->
+
+
+
