--- a/src/app/pages/extra-components/alertas-orion/components/categorias-redireccionadas/categorias-redireccionadas.component.html
+++ b/src/app/pages/extra-components/alertas-orion/components/categorias-redireccionadas/categorias-redireccionadas.component.html
@@ -2,11 +2,11 @@
   <thead>
     <tr>
       <th scope="col">Url Antigua</th>
-      <th scope="col">Id Category</th>
+      <th scope="col">Id Categoria</th>
       <th scope="col">Url Destino</th>
-      <th scope="col">Id Product</th>
+      <th scope="col">Id Producto</th>
       <th scope="col">Producto</th>
-      <th scope="col">Active</th>
+      <th scope="col">Activo</th>
     </tr>
   </thead>
   <tbody>
