--- a/src/app/pages/extra-components/alertas-orion/components/combinados-predeterminados-sin-stock/combinados-predeterminados-sin-stock.component.html
+++ b/src/app/pages/extra-components/alertas-orion/components/combinados-predeterminados-sin-stock/combinados-predeterminados-sin-stock.component.html
@@ -1,10 +1,10 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th scope="col">Id Product</th>
+      <th scope="col">Id Producto</th>
       <th scope="col">Id Atributo</th>
-      <th scope="col">Url Prestashop</th>
-      <th scope="col">Name</th>
+      <th scope="col">URL producto</th>
+      <th scope="col">Nombre producto</th>
       <th scope="col">Predeterminado</th>
       <th scope="col">Cantidad</th>
       <th scope="col">Total Producto</th>
