--- a/src/app/pages/extra-components/alertas-orion/components/pagos-fraccionados/pagos-fraccionados.component.html
+++ b/src/app/pages/extra-components/alertas-orion/components/pagos-fraccionados/pagos-fraccionados.component.html
@@ -4,7 +4,7 @@
       <th scope="col">Order Id</th>
       <th scope="col">Referencia</th>
       <th scope="col">Ruta Pedido Prestashop</th>
-      <th scope="col">Método de Pago</th>
+      <th scope="col">Pago/Canal</th>
       <th scope="col">Fecha de Creación</th>
     </tr>
   </thead>
