--- a/src/app/pages/extra-components/alertas-orion/components/pendientes-almacen/pendientes-almacen.component.html
+++ b/src/app/pages/extra-components/alertas-orion/components/pendientes-almacen/pendientes-almacen.component.html
@@ -2,10 +2,10 @@
   <thead>
     <tr>
       <th scope="col">Order Id</th>
-      <th scope="col">Referencia</th>
-      <th scope="col">Ruta Pedido Prestashop</th>
-      <th scope="col">Método de Pago</th>
-      <th scope="col">Fecha de Creación</th>
+      <th scope="col">Nº de pedido</th>
+      <th scope="col">URL pedido</th>
+      <th scope="col">Pago/Canal</th>
+      <th scope="col">Fecha pedido</th>
     </tr>
   </thead>
   <tbody>
