--- a/src/app/pages/tables/amazon-caracteres/amazon-caracteres.component.html
+++ b/src/app/pages/tables/amazon-caracteres/amazon-caracteres.component.html
@@ -1,9 +1,8 @@
 <nb-card>
-  <nb-card-header>Top 20 Favoritos</nb-card-header>
+  <nb-card-header>Alerta 200 caracteres nombre AMAZON</nb-card-header>
 
   <nb-card-body>
     <ng2-smart-table [settings]="config" [source]="source">
     </ng2-smart-table>
   </nb-card-body>
 </nb-card>
-
