--- a/src/app/pages/extra-components/alertas-orion/components/diferencia-de-pagos/diferencia-de-pagos.component.html
+++ b/src/app/pages/extra-components/alertas-orion/components/diferencia-de-pagos/diferencia-de-pagos.component.html
@@ -2,13 +2,13 @@
   <thead>
     <tr>
       <th scope="col">Order Id</th>
-      <th scope="col">TOTAL_PAID</th>
-      <th scope="col">AMOUNT</th>
+      <th scope="col">Total pedido</th>
+      <th scope="col">Total pagado</th>
       <th scope="col">DIFERENCIA</th>
-      <th scope="col">URL PRESTASHOP</th>
-      <th scope="col">REFERENCE</th>
-      <th scope="col">PAYMENT</th>
-      <th scope="col">DATE ADD</th>
+      <th scope="col">URL pedido</th>
+      <th scope="col">Nº de pedido</th>
+      <th scope="col">Pago/canal</th>
+      <th scope="col">Fecha de pedido</th>
     </tr>
   </thead>
   <tbody>
