--- a/src/app/pages/tables/sliders-elementor/sliders-elementor.component.html
+++ b/src/app/pages/tables/sliders-elementor/sliders-elementor.component.html
@@ -1,8 +1,7 @@
 <nb-card [nbSpinner]="loading" nbSpinnerStatus="primary">
-  <nb-card-header>Incidencias Top</nb-card-header>
+  <nb-card-header>Productos desactivados en slider de elementor</nb-card-header>
 
   <nb-card-body>
-    <p>Top 10 incidencias, últimos 10 días.</p>
     <ng2-smart-table [settings]="config" [source]="source">
     </ng2-smart-table>
   </nb-card-body>
