--- a/src/app/pages/extra-components/alertas-orion/components/combinados-predeterminados-sin-stock/combinados-predeterminados-sin-stock.component.html
+++ b/src/app/pages/extra-components/alertas-orion/components/combinados-predeterminados-sin-stock/combinados-predeterminados-sin-stock.component.html
@@ -14,7 +14,7 @@
     <tr *ngFor="let predeter of predeterminados">
       <td>{{ predeter.id_product }}</td>
       <td>{{ predeter.id_product_attribute }}</td>
-      <td><a href="{{ predeter.url }}" target="_blank">{{ predeter.url }}</a></td>
+      <td><a href="{{ predeter.url }}" target="_blank">Ver producto</a></td>
       <td>{{ predeter.name }}</td>
       <td>{{ predeter.default_on}}</td>
       <td>{{ predeter.cantidad_combinacion}}</td>
