--- a/src/app/pages/extra-components/alertas-orion/components/diferencia-de-pagos/diferencia-de-pagos.component.html
+++ b/src/app/pages/extra-components/alertas-orion/components/diferencia-de-pagos/diferencia-de-pagos.component.html
@@ -17,7 +17,7 @@
       <td>{{ diferencia.total_paid }}</td>
       <td>{{ diferencia.amount }}</td>
       <td>{{ diferencia.diferencia }}</td>
-      <td><a href="https://orion91.com/admin753tbd1ux/index.php?controller=AdminOrders&vieworder=&id_order={{ diferencia.id_order }}" target="_blank">https://orion91.com/admin753tbd1ux/index.php?controller=AdminOrders&vieworder=&id_order={{ diferencia.id_order }}</a></td>
+      <td><a href="https://orion91.com/admin753tbd1ux/index.php?controller=AdminOrders&vieworder=&id_order={{ diferencia.id_order }}" target="_blank">Ir a pedido</a></td>
       <td>{{ diferencia.reference }}</td>
       <td>{{ diferencia.payment }}</td>
       <td>{{ diferencia.date_add}}</td>
