--- a/src/app/pages/extra-components/alertas-orion/components/pendientes-almacen/pendientes-almacen.component.html
+++ b/src/app/pages/extra-components/alertas-orion/components/pendientes-almacen/pendientes-almacen.component.html
@@ -12,7 +12,7 @@
     <tr *ngFor="let pendientes of arrayPendientesAlmacen">
       <td>{{ pendientes.id_order }}</td>
       <td>{{ pendientes.reference }}</td>
-      <td><a href="{{ pendientes.url }}" target="_blank">{{ pendientes.url }}</a></td>
+      <td><a href="{{ pendientes.url }}" target="_blank">Ir a pedido</a></td>
       <td>{{ pendientes.payment }}</td>
       <td>{{ pendientes.date_add}}</td>
     </tr>
