--- a/src/app/pages/tables/favoritos/favoritos.component.html
+++ b/src/app/pages/tables/favoritos/favoritos.component.html
@@ -7,3 +7,13 @@
   </nb-card-body>
 </nb-card>
 
+<nb-card>
+  <nb-card-header>Gráfico Favoritos</nb-card-header>
+  <nb-card-body>
+
+    <div style="width: 90%; margin: auto;">
+      <canvas id="canvas">{{ chart }}</canvas>
+    </div>
+
+  </nb-card-body>
+</nb-card>
