--- a/src/app/pages/extra-components/alertas-orion/components/pagos-fraccionados/pagos-fraccionados.component.html
+++ b/src/app/pages/extra-components/alertas-orion/components/pagos-fraccionados/pagos-fraccionados.component.html
@@ -12,7 +12,7 @@
     <tr *ngFor="let pagos of arrayPagos">
       <td>{{ pagos.id_order }}</td>
       <td>{{ pagos.reference }}</td>
-      <td><a href="{{ pagos.url }}" target="_blank">{{ pagos.url }}</a></td>
+      <td><a href="{{ pagos.url }}" target="_blank">Ir a pedido</a></td>
       <td>{{ pagos.payment }}</td>
       <td>{{ pagos.date_add}}</td>
     </tr>
