--- a/src/app/pages/extra-components/alertas-orion/components/pre-almacen/pre-almacen.component.html
+++ b/src/app/pages/extra-components/alertas-orion/components/pre-almacen/pre-almacen.component.html
@@ -4,6 +4,7 @@
       <th scope="col">Order Id</th>
       <th scope="col">Referencia</th>
       <th scope="col">Método de Pago</th>
+      <th scope="col">URL pedido</th>
       <th scope="col">Estado</th>
       <th scope="col">Fecha de Creación</th>
     </tr>
@@ -13,6 +14,7 @@
       <td>{{ pre.id_order }}</td>
       <td>{{ pre.reference }}</td>
       <td>{{ pre.payment }}</td>
+      <td><a href="https://orion91.com/admin753tbd1ux/index.php?controller=AdminOrders&vieworder=&id_order={{ pre.id_order }}">Ir a pedido</a></td>
       <td>{{ pre.name }}</td>
       <td>{{ pre.date_add}}</td>
     </tr>
