--- a/src/app/pages/extra-components/alertas-orion/components/pagos-fraccionados/pagos-fraccionados.component.html
+++ b/src/app/pages/extra-components/alertas-orion/components/pagos-fraccionados/pagos-fraccionados.component.html
@@ -3,7 +3,7 @@
     <tr>
       <th scope="col">Order Id</th>
       <th scope="col">Referencia</th>
-      <th scope="col">Ruta Pedido Prestashop</th>
+      <th scope="col">URL Pedido</th>
       <th scope="col">Pago/Canal</th>
       <th scope="col">Fecha de Creación</th>
     </tr>
