--- a/src/app/pages/tables/categorias-por-meses/categorias-por-meses.component.html
+++ b/src/app/pages/tables/categorias-por-meses/categorias-por-meses.component.html
@@ -35,18 +35,18 @@
             </td>
             <td>{{cat.id_category}}</td>
             <td>{{cat.name}}</td>
-            <td>{{cat.ENERO}}</td>
-            <td>{{cat.FEBRERO}}</td>
-            <td>{{cat.MARZO}}</td>
-            <td>{{cat.ABRIL}}</td>
-            <td>{{cat.MAYO}}</td>
-            <td>{{cat.JUNIO}}</td>
-            <td>{{cat.JULIO}}</td>
-            <td>{{cat.AGOSTO}}</td>
-            <td>{{cat.SEPTIEMBRE}}</td>
-            <td>{{cat.OCTUBRE}}</td>
-            <td>{{cat.NOVIEMBRE}}</td>
-            <td>{{cat.DICIEMBRE}}</td>
+            <td align="right">{{cat.ENERO}}€</td>
+            <td align="right">{{cat.FEBRERO}}€</td>
+            <td align="right">{{cat.MARZO}}€</td>
+            <td align="right">{{cat.ABRIL}}€</td>
+            <td align="right">{{cat.MAYO}}€</td>
+            <td align="right">{{cat.JUNIO}}€</td>
+            <td align="right">{{cat.JULIO}}€</td>
+            <td align="right">{{cat.AGOSTO}}€</td>
+            <td align="right">{{cat.SEPTIEMBRE}}€</td>
+            <td align="right">{{cat.OCTUBRE}}€</td>
+            <td align="right">{{cat.NOVIEMBRE}}€</td>
+            <td align="right">{{cat.DICIEMBRE}}€</td>
           </tr>
 
           <tr [hidden]="!hideme[i]" class="sub-table no-bg" style="width: 100%;">
