--- a/src/app/pages/tables/productos-top-fechas/productos-top-fechas.component.html
+++ b/src/app/pages/tables/productos-top-fechas/productos-top-fechas.component.html
@@ -17,6 +17,9 @@
       <div>
         <button nbButton status="primary" (click)="vacear()" style="margin-right: 10px; margin-left: 10px;">Top 15 dias</button>
       </div>
+      <div>
+        <button nbButton status="primary" (click)="buscarProductosHoy()" style="margin-right: 10px; margin-left: 10px;">Top Hoy</button>
+      </div>
   </div>
 
 
