--- a/src/app/pages/tables/incidencias-mensuales/incidencias-mensuales.component.scss
+++ b/src/app/pages/tables/incidencias-mensuales/incidencias-mensuales.component.scss
@@ -1,3 +1,6 @@
+:host ::ng-deep ng2-smart-table td:nth-child(2){
+  text-align: center;
+}
 :host ::ng-deep ng2-smart-table td:nth-child(3){
   text-align: right;
 }
