--- a/src/app/pages/tables/dashboard/components/productos-top-hoy/productos-top-hoy.component.html
+++ b/src/app/pages/tables/dashboard/components/productos-top-hoy/productos-top-hoy.component.html
@@ -2,12 +2,12 @@
   <table class="table table-striped">
     <thead>
       <tr>
-        <th scope="col">Id Producto</th>
+        <th scope="col">Id</th>
         <th scope="col">Imagen</th>
         <th scope="col">Producto</th>
         <th scope="col">Categoría</th>
-        <th scope="col">Cantidad Vendida</th>
-        <th scope="col">Total Vendido</th>
+        <th scope="col">Cantidad</th>
+        <th scope="col">Total</th>
       </tr>
     </thead>
     <tbody>
