--- a/src/app/pages/tables/dashboard/dashboard.component.html
+++ b/src/app/pages/tables/dashboard/dashboard.component.html
@@ -49,4 +49,25 @@
   </div>
 </div>
 
+<!--Tercera Parte-->
+<div class="row">
+  <div class="col-xxxl-4 col-xxl-4 col-lg-5 col-md-6">
+    <nb-card>
+      <nb-card-header>Ventas Ultima Semana</nb-card-header>
+        <nb-card-body>
+          <ngx-ventas-semanal></ngx-ventas-semanal>
+        </nb-card-body>
+    </nb-card>
+  </div>
+
+  <div class="col-xxxl-8 col-xxl-8 col-lg-7 col-md-6">
+    <nb-card>
+      <nb-card-header>Roturas</nb-card-header>
+        <nb-card-body>
+          <ngx-rotura-stock-dashboard></ngx-rotura-stock-dashboard>
+        </nb-card-body>
+    </nb-card>
+  </div>
+</div>
+
 
